<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/content_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/titre_acceuil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/taille_titre"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimary"
            android:id="@+id/ivImageUser"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp" />

        <TextView
            android:text="@string/votre_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/ic_menu_camera"
            android:background="@drawable/input_circle_pressed"
            android:id="@+id/ibDialogueMedia"
            android:layout_alignBottom="@+id/ivImageUser"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:layout_marginRight="29dp"
            android:layout_marginEnd="29dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/entrez_votre_pr_nom_ici"
            android:ems="10"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:id="@+id/edName"
            android:textAlignment="center"
            android:layout_below="@+id/ivImageUser"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/contener_ratio">

            <RadioGroup
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checkedButton="@+id/radio1"
                android:layout_gravity="center"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homme"
                    />
                <RadioButton
                    android:layout_marginLeft="25dp"
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femme"/>
            </RadioGroup>

        </LinearLayout>

    </RelativeLayout>


</ScrollView>